argo/apps/edgar/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edgar
  namespace: edgar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edgar
  template:
    metadata:
      labels:
        app: edgar
    spec:
      containers:
        - name: edgar
          image: rskupnik/ether:edgar
          imagePullPolicy: Always
          args: ["--deviceConfig=/app/device-config.json", "--dashboard=/app/dashboards/demo.json"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: device-config
              mountPath: /app/device-config.json
              subPath: device-config.json
            - name: dashboards
              mountPath: /app/dashboards
      imagePullSecrets:
        - name: dockerhub-credentials
      volumes:
        - name: device-config
          configMap:
            name: edgar-device-config
        - name: dashboards
          configMap:
            name: edgar-dashboards
