argo/apps/edgar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edgar
  namespace: edgar
spec:
  selector:
    app: edgar
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
